# osmpbf

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml
benchmarks/: b_test.cpp  main.cpp
cmake/: HunterGate.cmake
include/osmpbf/: osmpbf  osmpbf.hpp
protobuf/: fileformat.proto  osmformat.proto
source/: fileformat.cpp  osmformat.cpp
tests/: t_test.cpp
